--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/vasuvanka/mobilequotes/issues"
+  },
+  "engines": {
+    "node": "0.10.x"
   }
 }
