--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "cheerio": "~0.19.0",
     "hapi": "~8.6.1",
     "express": "~4.12.4",
-    "ejs": "~2.3.1",
+    "ejs": "^2.3.1",
     "body-parser": "~1.12.4",
     "mongoose": "~4.0.5",
     "swig": "~1.4.2",
